--- a/index.html
+++ b/index.html
@@ -27,14 +27,13 @@
     <h1>금융의 모든것</br>토스에서 쉽고 간편하게</h1>
     <div class="href_menu">
         <div>
-            
-            <a href="https://apps.apple.com/kr/app/%ED%86%A0%EC%8A%A4/id839333328">
+            <a target="_blank" href="https://apps.apple.com/kr/app/%ED%86%A0%EC%8A%A4/id839333328">
                 <img src="https://static.toss.im/png-icons/timeline/applekorea.png" height="24" width="24" class="p-button__left">
                 App Store
             </a>
         </div>
         <div>
-            <a href="https://play.google.com/store/apps/details?id=viva.republica.toss&pli=1">
+            <a target="_blank" href="https://play.google.com/store/apps/details?id=viva.republica.toss&pli=1">
                 <img src="https://static.toss.im/png-icons/timeline/googleplay.png" height="24" width="24" class="p-button__left">
                 Play Store
             </a>
