--- a/index.html
+++ b/index.html
@@ -9,21 +9,51 @@
     <link rel="shortcut icon" href="icon.ico">
 </head>
 <body>
-    <div class="nav_bar">
-        <div class="logo"><a href="index.html"><img src="캡처.PNG" alt=""></a></div>
-        <div class="main_menu">
-            <div class="menu_item">회사 소개</div>
-            <div class="menu_item">고객센터</div>
-            <div class="menu_item">자주 묻는 질문</div>
-            <div class="menu_item">토스인증서</div>
-            <div class="menu_item">채용</div>
+    <nav class="main_nav">
+        <div class="logo">
+            <img src="캡처.PNG" alt="">
         </div>
-        <div class="lang_menu">
-            <div class="lang_item">KOR</div>
-            <span style="color:gray">|</span>
-            <div class="lang_item" style="color:gray">ENG</div>
-        </div>
-    </div>
+        <nav class="nav_bar"></nav>
+            <div class="main_menu">
+                <ul>
+                    <li><a href="">회사 소개</a></li>
+                    <li><a href="">고객센터</a></li>
+                    <li><a href="">자주 묻는 질문</a></li>
+                    <li><a href="">토스인증서</a></li>
+                    <li><a href="">채용</a></li>
+                </ul>
+            </div>
+            <div class="lang_menu">
+                <ul>
+                    <li class="lang_item">KOR</li>
+                    <li> | </li>
+                    <li class="lang_item">ENG</li>
+                </ul>
+            </div>
+            <div class="min_menu">
+                <div>
+                    <button type="button" class="download_button">앱 다운로드</button>
+                    <div class="click_menu">
+                        <div>
+                            <a target="_blank" href="https://apps.apple.com/kr/app/%ED%86%A0%EC%8A%A4/id839333328">
+                                <img src="https://static.toss.im/png-icons/timeline/applekorea.png" height="24" width="24" class="p-button__left">
+                                App Store 다운로드
+                            </a>
+                        </div>
+                        <div>
+                            <a target="_blank" href="https://play.google.com/store/apps/details?id=viva.republica.toss&pli=1">
+                                <img src="https://static.toss.im/png-icons/timeline/googleplay.png" height="24" width="24" class="p-button__left">
+                                Play Store 다운로드
+                            </a>
+                        </div>
+                    </div>
+                </div>
+                <button type="button" class="hamburger">
+                    <img src="hamburger.svg" alt="" width="24" height="24">
+                </button>
+            </div>
+        </nav>   
+    </nav>
     <h1>금융의 모든것</br>토스에서 쉽고 간편하게</h1>
     <div class="href_menu">
         <div>
