--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title>토스</title>
     <link rel="stylesheet" href="index.css">
     <link rel="shortcut icon" href="icon.ico">
+    <script src="main.js" defer></script>
 </head>
 <body>
     <nav class="main_nav">
@@ -32,8 +33,8 @@
             </div>
             <div class="min_menu">
                 <div>
-                    <button type="button" class="download_button">앱 다운로드</button>
-                    <div class="click_menu">
+                    <button id = "button" type="button" class="download_button">앱 다운로드</button>
+                    <div id = "menu" class="click_menu">
                         <div>
                             <a target="_blank" href="https://apps.apple.com/kr/app/%ED%86%A0%EC%8A%A4/id839333328">
                                 <img src="https://static.toss.im/png-icons/timeline/applekorea.png" height="24" width="24" class="p-button__left">
