--- a/index.html
+++ b/index.html
@@ -49,11 +49,21 @@
                         </div>
                     </div>
                 </div>
-                <button type="button" class="hamburger">
+                <button id = "button2" type="button" class="hamburger">
                     <img src="hamburger.svg" alt="" width="24" height="24">
                 </button>
+                <div id="menu2">
+                    <ul>
+                        <li>회사 소개</li>
+                        <li>고객센터</li>
+                        <li>자주 묻는 질문</li>
+                        <li>토스인증서</li>
+                        <li>채용</li>
+                        <li>KOR | ENG</li>
+                    </ul>
+                </div>
             </div>
-        </nav>   
+        </nav>
     </nav>
     <h1>금융의 모든것</br>토스에서 쉽고 간편하게</h1>
     <div class="href_menu">
